--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,7 +1,21 @@
 .menu {
     display: flex;
+    border: 2px solid white;
+    border-radius: 4px;
+    padding: 10px;
+    margin: 0;
+
+    @media screen and (max-width: 540px) {
+        flex-direction: column;
+    }
+
     &__item {
         margin-left: 10px;
         list-style-type: none;
+
+        @media screen and (max-width: 540px) {
+            margin-left: 0;
+            margin-top: 10px;
+        }
     }
 }
