--- a/src/app/multi/multi.template.html
+++ b/src/app/multi/multi.template.html
@@ -1,4 +1,3 @@
 <ng-container>
-  <p-multiSelect [options]="cities1" [(ngModel)]="selectedCities1"></p-multiSelect>
-  <p-multiSelect [options]="cities2" [(ngModel)]="selectedCities2" optionLabel="name"></p-multiSelect>
+  <p-multiSelect [options]="cities" [(ngModel)]="selectedCities"></p-multiSelect>
 </ng-container>
